# django_template

./: .editorconfig  .flake8  .isort.cfg  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
app/api/: base.py  urls.py
app/django_app/: settings.py  urls.py
app/django_app/settings/: __init__.py  advanced_settings.py  settings.py  settings_test.py
app/runner/: celery.sh  django_run.sh
makefiles/: docker_base.make  python.make
nginx/: nginx.conf
