[tool.poetry]
name = "app"
version = "0.1.0"
description = "Tamplate for django project"
authors = ["AlexanderZug <alexandertsygankov.unterwegs@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
djangorestframework = "^3.14.0"
drf-yasg = "^1.21.8"
python-dotenv = "^1.0.1"
drf-spectacular = "^0.27.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
ruff = "^0.7.1"
mypy = "^1.13.0"
django-stubs = "^5.1.1"
djangorestframework-stubs = "^3.15.1"
pytest-django = "^4.9.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
	"UP", # pyupgrade
	"B", # flake8-bugbear
	"F", # pyflakes
	"E", # pycodestyle
	"DJ", # flake8-django
	"I", # isort
	"N", # pep8-naming
	"C4", # flake8-comprehensions
]

ignore = [
	"DJ007", # Do not use __all__ with ModelForm, use fields instead
]

exclude = [
	"migrations",
	"app/django_app/settings/*",
	"app/__init__.py",
]

[tool.mypy]
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
exclude = [
	"migrations",
	"app/django_app/settings/*",
	"app/*/__init__.py",
]

[[tool.mypy.overrides]]
module = "app.api.base"
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "app.django_app.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "django_app.settings.settings_test"
python_files = ["test_*.py", "*_test.py", "testing/python/*.py"]
addopts = ["--cov=app"]
